--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <div class="row">
           <div class="col-md-6">
             <p class="mb-0">
-              <span class="mr-3"><strong class="text-white">Phone:</strong> <a href="tel://#">+1 234 5678 9101</a></span>
-              <span><strong class="text-white">Email:</strong> <a href="#">info@yourdomain.com</a></span>
+              <span class="mr-3"><strong class="text-white">Phone:</strong> <a href="tel:+916380447215">+91 6380 4472 15</a></span>
+              <span><strong class="text-white">Email:</strong> <a href="mailto:contact@astasystech.com">contact@astasystech.com</a></span>
             </p>
           </div>
           <div class="col-md-6">
@@ -108,7 +108,7 @@
             <div class="row justify-content-center mb-4">
               <div class="col-md-8 text-center">
                 <h1>We Love To Build <span class="typed-words"></span></h1>
-                <p class="lead mb-5">Free Web Template by <a href="#" target="_blank">Colorlib</a></p>
+                <!-- <p class="lead mb-5">Free Web Template by <a href="#" target="_blank">Colorlib</a></p> -->
                 <div><a data-fancybox data-ratio="2" href="https://vimeo.com/317571768" class="btn btn-primary btn-md">Watch Video</a></div>
               </div>
             </div>
@@ -633,13 +633,13 @@
             
             <div class="p-4 mb-3 bg-white">
               <p class="mb-0 font-weight-bold">Address</p>
-              <p class="mb-4">203 Fake St. Mountain View, San Francisco, California, USA</p>
+              <p class="mb-4">37, ganeshapuram South Street, Melapalayam , Tirunelveli -627005</p>
 
               <p class="mb-0 font-weight-bold">Phone</p>
-              <p class="mb-4"><a href="#">+1 232 3235 324</a></p>
+              <p class="mb-4"><a href="tel:+916380447215">+91 6380 4472 15</a></p>
 
               <p class="mb-0 font-weight-bold">Email Address</p>
-              <p class="mb-0"><a href="#">youremail@domain.com</a></p>
+              <p class="mb-0"><a href="mailto:contact@astasystech.com">contact@astasystech.com</a></p>
 
             </div>
             
